modifying hover and references images

--- a/impressum.html
+++ b/impressum.html
@@ -32,7 +32,7 @@
         </button>
     <div class="uk-navbar-left">
         <ul class="uk-navbar-nav">
-            <li class="uk-active"><a href="#"><h3 class=" uk-text-bold uk-display-inline uk-margin-remove-bottom">SEMAS</h3></a></li>
+            <li class="uk-active logo-semas"><a href="index.html"><h3 class=" uk-text-bold uk-display-inline uk-margin-remove-bottom">SEMAS</h3></a></li>
         </ul>
     </div>
     <div class="uk-navbar-right toggle-target collapsed" id="toggle-usage">
@@ -44,7 +44,7 @@
             <!-- <li class="uk-parent"><a href="./index.html#history-container">Historie /</a></li> -->
             <li>
                 <a href="index.html#services-container">Dienstleistungen /</a>
-                <div class="uk-navbar-dropdown">
+                <div class="uk-navbar-dropdown uk-padding-remove">
                     <ul class="uk-nav uk-navbar-dropdown-nav">
                         <li><a href="./index.html#references-container">Aktuelle Projekten /</a></li>
                         <li><a href="./index.html#history-container">Historie /</a></li>
@@ -53,7 +53,7 @@
             </li>
             <li>
                 <a href="index.html#contact-container">Kontakt /</a>
-                <div class="uk-navbar-dropdown">
+                <div class="uk-navbar-dropdown uk-padding-remove">
                     <ul class="uk-nav uk-navbar-dropdown-nav">
                         <li><a href="#" uk-scroll>Impressum /</a></li>
                     </ul>
