--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </button>
     <div class="uk-navbar-left">
         <ul class="uk-navbar-nav">
-            <li class="uk-active"><a href="#"><h3 class=" uk-text-bold uk-display-inline uk-margin-remove-bottom">SEMAS</h3></a></li>
+            <li class="uk-active logo-semas"><a href="#"><h3 class=" uk-text-bold uk-display-inline uk-margin-remove-bottom">SEMAS</h3></a></li>
         </ul>
     </div>
     <div class="uk-navbar-right toggle-target collapsed" id="toggle-usage">
@@ -67,7 +67,7 @@
             <!-- <li class="uk-parent"><a href="./index.html#history-container">Historie /</a></li> -->
             <li>
                 <a href="index.html#services-container" uk-scroll>Dienstleistungen /</a>
-                <div class="uk-navbar-dropdown">
+                <div class="uk-navbar-dropdown uk-padding-remove">
                     <ul class="uk-nav uk-navbar-dropdown-nav">
                         <li><a href="./index.html#references-container" uk-scroll>Aktuelle Projekten /</a></li>
                         <li><a href="./index.html#history-container" uk-scroll>Historie /</a></li>
@@ -76,7 +76,7 @@
             </li>
             <li>
                 <a href="index.html#contact-container" uk-scroll>Kontakt /</a>
-                <div class="uk-navbar-dropdown">
+                <div class="uk-navbar-dropdown uk-padding-remove">
                     <ul class="uk-nav uk-navbar-dropdown-nav">
                         <li><a href="impressum.html">Impressum /</a></li>
                     </ul>
