change Projektentwicklung image

--- a/index.html
+++ b/index.html
@@ -208,11 +208,11 @@
             <div>
                 <div class="uk-card uk-card-default ">
                     <div class="uk-card-body uk-padding-remove-vertical uk-padding-remove-horizontal">
-                        <img src="./images/Projektentwicklung.jpg" class="uk-width-1-1" alt="">
+                        <img src="./images/Projektentwicklung2.jpg" class="uk-width-1-1" alt="">
                         <div class="uk-padding-large padding-projekt">
                             <div class="services-card">
                                 <h3 class="uk-card-title">Projektentwicklung</h3>
-                                <p class="uk-margin-remove-bottom">Mit optimierter Kostenermittlung bei der Ausfüührung als Generalübernehmer</p>
+                                <p class="uk-margin-remove-bottom">Mit optimierter Kostenermittlung bei der Ausführung als Generalübernehmer</p>
                                 <!-- <button class="primary-button" onClick="parent.location='work.html#renovation-container'">Mehr sehen</button> -->
                             </div>
                         </div>
