--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Mit dem Team mit über 30 Jahren Erfahrung in der Baubranche ist die Bauunternehmung Semas ein fortschrittliches Bauunternehmen mit Sitz in Kadenbach und einem etablierten Ruf.">
+    <meta property="og:url" content="https://bauunternehmung-semas.de">
+    <meta property="og:title" content="Bauunternehmung Semas">
+    <meta property="og:image" content="./images/home_banner.jpeg">
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Piazzolla:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">  
@@ -273,7 +276,7 @@
             <ul class="uk-slider-items uk-grid">
                 <li class="history-img uk-width-1-2 ">
                     <div class="uk-panel " uk-slider-parallax="scale:0.85,1,0.85; opacity:0.3,1,0.3">
-                        <h5 class="border-bottom-history">Jan. 2021 Ist Semas in die Welt gerufen.</h5>
+                        <h5 class="border-bottom-history">Jan. 2021 wurde die Semas in die Welt gerufen.</h5>
                         <img src="./images/Historie_1.jpeg" alt="">
                     </div>
                 </li>
