adding link preview description

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta property="og:url" content="https://bauunternehmung-semas.de">
     <meta property="og:title" content="Bauunternehmung Semas">
     <meta property="og:image" content="./images/home_banner.jpeg">
+    <meta property='og:description' content='Mit dem Team mit über 30 Jahren Erfahrung in der Baubranche ist die Bauunternehmung Semas ein fortschrittliches Bauunternehmen mit Sitz in Kadenbach und einem etablierten Ruf.'/>
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Piazzolla:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">  
