added video to references (Aktuelle Projekte) in index.html

--- a/index.html
+++ b/index.html
@@ -261,6 +261,10 @@
                 </div>
             </div>
     </div>
+        
+            <br><br><br>
+            <iframe src="./images/End.mp4" width="1920" height="1080" frameborder="0" allowfullscreen uk-responsive ></iframe>
+
     </div>
 
     
