End video from .mp4 to .mov

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
     </div>
         
             <br><br><br>
-            <iframe src="./images/End.mp4" width="1920" height="1080" frameborder="0" allowfullscreen uk-responsive ></iframe>
+            <iframe src="./images/End.mov" width="1920" height="1080" frameborder="0" allowfullscreen uk-responsive ></iframe>
 
     </div>
 
