construction page mail
mail to link

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h3 class="uk-text-center uk-text-bold">Bauunternehmung Semas GmbH</h3>
         <h5 class="uk-text-center uk-margin-small-top uk-margin-remove-bottom">Sehr geehrte Besucherin, sehr geehrter Besucher,</h5>
         <h5 class="uk-text-center uk-margin-small-top uk-margin-remove-bottom">unsere Webseite wird derzeit auf den aktuellsten Stand gebracht.</h5>
-        <h5 class="uk-text-center uk-margin-small-top uk-margin-remove-bottom">Für Kontaktaufnahme sind wir unter der: <span class="uk-text-primary">info@bauunternehmung-semas.de</span></h5>
+        <h5 class="uk-text-center uk-margin-small-top uk-margin-remove-bottom">Für Kontaktaufnahme sind wir unter der: <span ><a href="mailto:info@bauunternehmung-semas.de">info@bauunternehmung-semas.de</a></span></h5>
     </div>
 </div>
 
