--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <h5 class="uk-text-center uk-margin-small-top uk-margin-remove-bottom">Sehr geehrte Besucherin, sehr geehrter Besucher,</h5>
         <h5 class="uk-text-center uk-margin-small-top uk-margin-remove-bottom">unsere Webseite wird derzeit auf den aktuellsten Stand gebracht.</h5>
         <h5 class="uk-text-center uk-margin-small-top uk-margin-remove-bottom">Für Kontaktaufnahme sind wir unter der: <span ><a href="mailto:info@bauunternehmung-semas.de">info@bauunternehmung-semas.de</a></span></h5>
+        <h5 class="uk-text-center uk-margin-small-top uk-margin-remove-bottom">erreichbar.</h5>
     </div>
 </div>
 
