--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
     <br><br>
     <div>
         <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-1 uk-margin reference-card" uk-grid>
-                <img class="uk-margin-right" src="./images/aktuelleProjekte1.jpeg" alt="Neubau einer Wohnanlage">
+                <img class="uk-margin-right" src="./images/aktuelleProjekte1.jpg" alt="Neubau einer Wohnanlage">
                 <div class=" uk-position-bottom uk-overlay uk-overlay-default uk-padding-small">
                     <p class="uk-h4 uk-margin-remove uk-text-bold">Neubau einer Wohnanlage in Koblenz.</p>
                 </div>
