--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                 </div>
             </div>
             <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-1 uk-margin reference-card uk-margin-auto-left" uk-grid>
-                <img class="uk-margin-right" src="./images/aktuelleProjekte6.jpeg" alt="">
+                <img class="uk-margin-right" src="./images/aktuelleProjekte6.jpg" alt="">
                 <div class=" uk-position-bottom uk-overlay uk-overlay-default uk-padding-small">
                     <p class="uk-h4 uk-margin-remove uk-text-bold">Neubau Mehrfamilienhaus in Neichen.</p>
                 </div>
