SOLVING AKTUELLE PROJEKTE 1 5 6 7 PROBLEMS

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
     <br><br>
     <div>
         <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-1 uk-margin reference-card" uk-grid>
-                <img class="uk-margin-right" src="./images/aktuelleProjekte1.jpg" alt="Neubau einer Wohnanlage">
+                <img class="uk-margin-right" src="./images/aktuelleProjekte1.JPG" alt="Neubau einer Wohnanlage">
                 <div class=" uk-position-bottom uk-overlay uk-overlay-default uk-padding-small">
                     <p class="uk-h4 uk-margin-remove uk-text-bold">Neubau einer Wohnanlage in Koblenz.</p>
                 </div>
@@ -267,20 +267,20 @@
                 </div>
             </div>
             <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-1 uk-margin reference-card" uk-grid>
-                <img class="uk-margin-right" src="./images/aktuelleProjekte5.jpg" alt="">
+                <img class="uk-margin-right" src="./images/aktuelleProjekte5.JPG" alt="">
                 <div class=" uk-position-bottom uk-overlay uk-overlay-default uk-padding-small">
                     <p class="uk-h4 uk-margin-remove uk-text-bold">Folgeauftrag Neubau eines Reihenhaus in Siegen.</p>
                 </div>
             </div>
             <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-1 uk-margin reference-card uk-margin-auto-left" uk-grid>
-                <img class="uk-margin-right" src="./images/aktuelleProjekte6.jpg" alt="">
+                <img class="uk-margin-right" src="./images/aktuelleProjekte6.JPG" alt="">
                 <div class=" uk-position-bottom uk-overlay uk-overlay-default uk-padding-small">
                     <p class="uk-h4 uk-margin-remove uk-text-bold">Neubau Mehrfamilienhaus in Neichen.</p>
                 </div>
             </div>
 
             <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-1 uk-margin reference-card" uk-grid>
-                <img class="uk-margin-right" src="./images/aktuelleProjekte7.jpg" alt="">
+                <img class="uk-margin-right" src="./images/aktuelleProjekte7.JPG" alt="">
                 <div class=" uk-position-bottom uk-overlay uk-overlay-default uk-padding-small">
                     <p class="uk-h4 uk-margin-remove uk-text-bold">Neubau Ein- und Mehrfamilienhäuser in Köln-Hürth.</p>
                 </div>
