change aktuelleProjekte8 image

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                 </div>
             </div>
             <div class="uk-card uk-card-default uk-grid-collapse uk-child-width-1-1 uk-margin reference-card uk-margin-auto-left" uk-grid>
-                <img class="uk-margin-right" src="./images/aktuelleProjekte8.jpeg" alt="">
+                <img class="uk-margin-right" src="./images/aktuelleProjekte8.png" alt="">
                 <div class=" uk-position-bottom uk-overlay uk-overlay-default uk-padding-small">
                     <p class="uk-h4 uk-margin-remove uk-text-bold">Umbau eines Mehrfamilienhauses in Eitelborn.</p>
                 </div>
