add Ayman to team, change kurt to kurth

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <div>
                 <div class="uk-card uk-card-body">
                     <img class="uk-border-circle circle-image" src="./images/Team_2.JPG">
-                    Dennis Kurt (Polier)</div>
+                    Dennis Kurth (Polier)</div>
             </div>
             <div>
                 <div class="uk-card uk-card-body">
@@ -203,6 +203,11 @@
                 <div class="uk-card uk-card-body">
                     <img class="uk-border-circle circle-image" src="./images/Team_6.png">
                     Manfred Müller ( Polier)</div>
+            </div>
+            <div>
+                <div class="uk-card uk-card-body">
+                    <img class="uk-border-circle circle-image" src="./images/Team_6.png">
+                    Ayman Al- Jenady ( Vorarbeiter)</div>
             </div>
             <div>
                 <div class="uk-card uk-card-body">
