remove people, change location+tel no

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <div class=" uk-container uk-padding" data-aos="fade-up">
         <h3>Willkommen bei </h3>
         <h1>Bauunternehmung Semas</h1>
-        <h4>Die Bauunternehmung Semas ist ein fortschrittliches und dynamisches Hochbauunternehmen mit Sitz in Kadenbach, Koblenz. Unser persönlicher und sorgfältiger Projektansatz ist der Unterscheidungsfaktor, auf dem der Ruf unseres Unternehmens für hervorragende Projektabwicklung basiert, gemäß unserem Motto: Gut ist nicht genug.</h4>
+        <h4>Die Bauunternehmung Semas ist ein fortschrittliches und dynamisches Hochbauunternehmen mit Sitz in Montabuar, Koblenz. Unser persönlicher und sorgfältiger Projektansatz ist der Unterscheidungsfaktor, auf dem der Ruf unseres Unternehmens für hervorragende Projektabwicklung basiert, gemäß unserem Motto: Gut ist nicht genug.</h4>
     </div>
 </section>
 
@@ -181,11 +181,6 @@
             </div>
             <div>
                 <div class="uk-card uk-card-body">
-                    <img class="uk-border-circle circle-image" src="./images/Team_2.JPG">
-                    Dennis Kurth (Polier)</div>
-            </div>
-            <div>
-                <div class="uk-card uk-card-body">
                     <img class="uk-border-circle circle-image" src="./images/Team_3.JPG">
                     Mohamad Abdulhak (Außendienst)</div>
             </div>
@@ -202,11 +197,6 @@
             <div>
                 <div class="uk-card uk-card-body">
                     <img class="uk-border-circle circle-image" src="./images/Team_6.png">
-                    Manfred Müller ( Polier)</div>
-            </div>
-            <div>
-                <div class="uk-card uk-card-body">
-                    <img class="uk-border-circle circle-image" src="./images/Team_6.png">
                     Ayman Al- Jenady ( Vorarbeiter)</div>
             </div>
             <div>
@@ -214,11 +204,7 @@
                     <img class="uk-border-circle circle-image" src="./images/Team_7.png">
                     Adham Farzat (Geschäftsführer)</div>
             </div>
-            <div>
-                <div class="uk-card uk-card-body">
-                    <img class="uk-border-circle circle-image" src="./images/Team_8.jpg">
-                    Christian Saramet (Gesellschafter)</div>
-            </div>
+
         </div>
 
     </div>
@@ -268,7 +254,7 @@
             <div>
                 <div class="uk-card uk-card-default ">
                     <div class="uk-card-body uk-padding-remove-vertical uk-padding-remove-horizontal">
-                        <img src="./images/Projektentwicklung2.jpg" class="uk-width-1-1" alt="">
+                        <img src="./images/slider1.jpg" class="uk-width-1-1" alt="">
                         <div class="uk-padding-large padding-projekt">
                             <div class="services-card">
                                 <h3 class="uk-card-title">Projektentwicklung</h3>
@@ -382,11 +368,8 @@
                     </div>
                   </div>
               <div class="card">
-                <div class="info">
-                    <h3 class="title"></h3>
-                    <img class="title-img" src="./images/Historie_2.jpg" alt="">
-                  <p>Christian Saremet ist offiziell in das Unternehmen eingestiegen. </p>
-                </div>
+<!--              <div class="info">
+                </div>-->  
               </div>
             </div>
           </div>
@@ -523,8 +506,8 @@
             <!-- </div> -->
             <!-- <div class="uk-padding">                     -->
                 <br>
-                <a href="" target="_blank" class="uk-icon-button" uk-icon="receiver"></a>
-                <span id="phone-num">02620-30198-76</span>
+                <a href="tel:004917682264376" target="_blank" class="uk-icon-button" uk-icon="receiver"></a>
+                <span id="phone-num"><a href="tel:004917682264376">+49 176 82264376</a></span>
             </div>
         </div>
         <hr class="uk-divider-icon">
