return manfred and dennis

--- a/index.html
+++ b/index.html
@@ -181,6 +181,11 @@
             </div>
             <div>
                 <div class="uk-card uk-card-body">
+                    <img class="uk-border-circle circle-image" src="./images/Team_6.png">
+                    Dennis Kurth (Polier)</div>
+            </div>
+            <div>
+                <div class="uk-card uk-card-body">
                     <img class="uk-border-circle circle-image" src="./images/Team_3.JPG">
                     Mohamad Abdulhak (Außendienst)</div>
             </div>
@@ -197,7 +202,17 @@
             <div>
                 <div class="uk-card uk-card-body">
                     <img class="uk-border-circle circle-image" src="./images/Team_6.png">
+                    Manfred Müller ( Polier)</div>
+            </div>
+            <div>
+                <div class="uk-card uk-card-body">
+                    <img class="uk-border-circle circle-image" src="./images/Team_6.png">
                     Ayman Al- Jenady ( Vorarbeiter)</div>
+            </div>
+            <div>
+                <div class="uk-card uk-card-body">
+                    <img class="uk-border-circle circle-image" src="">
+                    </div>
             </div>
             <div>
                 <div class="uk-card uk-card-body">
