--- a/index.html
+++ b/index.html
@@ -517,15 +517,16 @@
             <!-- </div> -->
             <!-- <div class="uk-padding">                     -->
                 <br>
-                <a href="tel:004917682264376" target="_blank" class="uk-icon-button" uk-icon="receiver"></a>
-                <span id="phone-num"><a href="tel:004917682264376">+49 176 82264376</a></span>
+                <a href="tel:004926130002634" target="_blank" class="uk-icon-button" uk-icon="receiver"></a>
+                <span id="phone-num"><a href="tel:004926130002634">+49 261 30002634</a></span>
             </div>
         </div>
         <hr class="uk-divider-icon">
         <h6>Site implemented and designed by <span><a href="https://github.com/talaeter">Tala Eter</a></span></h6>
     </div>
     <div>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10175.170528185465!2d7.7338918!3d50.3890641!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3203c55ddefbd58d!2sBauunternehmung%20Semas%20GmbH!5e0!3m2!1sen!2sjo!4v1627194691844!5m2!1sen!2sjo" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>    </div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d159.15950524261535!2d7.603792530059188!3d50.33760735685625!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47be7b67d7b82013%3A0x283f1a6e8dd90527!2sSebastianistra%C3%9Fe%2068%2C%2056076%20Koblenz%2C%20Germany!5e0!3m2!1sen!2sus!4v1720299212840!5m2!1sen!2sus" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10175.170528185465!2d7.7338918!3d50.3890641!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3203c55ddefbd58d!2sBauunternehmung%20Semas%20GmbH!5e0!3m2!1sen!2sjo!4v1627194691844!5m2!1sen!2sjo" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>    </div> -->
     </div>
 </footer>
 
