Update impressum number, location, and finanzamt

--- a/impressum.html
+++ b/impressum.html
@@ -74,12 +74,12 @@
     <h1 class="uk-text-center impressum-title uk-light uk-background-secondary">Impressum</h1>
     <div class="uk-container uk-padding">
         <h3 class="uk-text-left uk-text-bold">Bauunternehmung Semas GmbH</h3>
-        <h5 class="uk-text-left uk-margin-small-top uk-margin-remove-bottom">Freiherr-vom-Stein-Strasse 12</h5>
-        <h5 class="uk-text-left uk-margin-small-top uk-margin-remove-bottom">56337 Kadenbach</h5>
+        <h5 class="uk-text-left uk-margin-small-top uk-margin-remove-bottom">Sebastianistraße 68,</h5>
+        <h5 class="uk-text-left uk-margin-small-top uk-margin-remove-bottom">56076 Koblenz</h5>
         <h3 class="uk-text-left uk-text-bold">Geschäftsführer:</h3>
         <h5 class="uk-text-left uk-margin-small-top uk-margin-remove-bottom">Adham Tlasfarzat</h5>
-        <h3 class="uk-text-left uk-text-bold">Umsatzsteueridentifikationsnummer ( § 27a UStG)</h3>
-        <h5 class="uk-text-left uk-margin-small-top uk-margin-remove-bottom">USt-Ident.-Nr. DE341690251</h5>
+        <h3 class="uk-text-left uk-text-bold">Finanzamt Koblenz/ Steuernummer:</h3>
+        <h5 class="uk-text-left uk-margin-small-top uk-margin-remove-bottom">22/659/10177</h5>
         <h3 class="uk-text-left uk-text-bold">Haftung für Inhalte:</h3>
         <h5 class="uk-text-left uk-margin-small-top uk-margin-remove-bottom">Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen.  Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.</h5>
         <h3 class="uk-text-left uk-text-bold">Haftung für Links:</h3>
@@ -116,15 +116,16 @@
             <!-- </div> -->
             <!-- <div class="uk-padding">                     -->
                 <br>
-                <a href="" target="_blank" class="uk-icon-button" uk-icon="receiver"></a>
-                <span id="phone-num">02620-30198-76</span>
+                <a href="tel:004926130002634" target="_blank" class="uk-icon-button" uk-icon="receiver"></a>
+                <span id="phone-num"><a href="tel:004926130002634">+49 261 30002634</a></span>
             </div>
         </div>
         <hr class="uk-divider-icon">
-        <h6>Site implemented and designed by <span><a href="">Tala Eter</a></span></h6>
+        <h6>Site implemented and designed by <span><a href="https://github.com/talaeter">Tala Eter</a></span></h6>
     </div>
     <div>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10175.170528185465!2d7.7338918!3d50.3890641!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3203c55ddefbd58d!2sBauunternehmung%20Semas%20GmbH!5e0!3m2!1sen!2sjo!4v1627194691844!5m2!1sen!2sjo" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>    </div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d159.15950524261535!2d7.603792530059188!3d50.33760735685625!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47be7b67d7b82013%3A0x283f1a6e8dd90527!2sSebastianistra%C3%9Fe%2068%2C%2056076%20Koblenz%2C%20Germany!5e0!3m2!1sen!2sus!4v1720299212840!5m2!1sen!2sus" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10175.170528185465!2d7.7338918!3d50.3890641!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3203c55ddefbd58d!2sBauunternehmung%20Semas%20GmbH!5e0!3m2!1sen!2sjo!4v1627194691844!5m2!1sen!2sjo" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>    </div> -->
     </div>
 </footer>
 
